--- a/TinyTroupe_simple_demo.ipynb
+++ b/TinyTroupe_simple_demo.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "import os\n",
     "# Set your API key\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"XXX\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"your-api-key-here\""
    ]
   },
   {
